--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/typescript" src="build/bundle.js"></script>
+    <script type="text/typescript" src="/bundle.js"></script>
   </body>
 </html>
